// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiQuickSelect is rendered 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiTitle
        size="xxxs"
      >
        <span>
          Quick select
        </span>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="Previous time window"
        delay="regular"
        position="top"
      >
        <EuiButtonIcon
          aria-label="Previous time window"
          iconType="arrowLeft"
          onClick={[Function]}
        />
      </EuiToolTip>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="Next time window"
        delay="regular"
        position="top"
      >
        <EuiButtonIcon
          aria-label="Next time window"
          iconType="arrowRight"
          onClick={[Function]}
        />
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiSelect
        aria-label="Quick time tense"
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Last",
              "value": "last",
            },
            Object {
              "text": "Next",
              "value": "next",
            },
          ]
        }
        value="last"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiFieldNumber
        aria-label="Quick time value"
        compressed={true}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        value={15}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSelect
        aria-label="Quick time units"
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "seconds",
              "value": "s",
            },
            Object {
              "text": "minutes",
              "value": "m",
            },
            Object {
              "text": "hours",
              "value": "h",
            },
            Object {
              "text": "days",
              "value": "d",
            },
            Object {
              "text": "weeks",
              "value": "w",
            },
            Object {
              "text": "months",
              "value": "M",
            },
            Object {
              "text": "years",
              "value": "y",
            },
          ]
        }
        value="m"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        className="euiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        Apply
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="s"
  />
</Fragment>
`;

exports[`EuiQuickSelect prevQuickSelect 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiTitle
        size="xxxs"
      >
        <span>
          Quick select
        </span>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="Previous time window"
        delay="regular"
        position="top"
      >
        <EuiButtonIcon
          aria-label="Previous time window"
          iconType="arrowLeft"
          onClick={[Function]}
        />
      </EuiToolTip>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="Next time window"
        delay="regular"
        position="top"
      >
        <EuiButtonIcon
          aria-label="Next time window"
          iconType="arrowRight"
          onClick={[Function]}
        />
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    gutterSize="s"
    responsive={false}
  >
    <EuiFlexItem>
      <EuiSelect
        aria-label="Quick time tense"
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "Last",
              "value": "last",
            },
            Object {
              "text": "Next",
              "value": "next",
            },
          ]
        }
        value="Next"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiFieldNumber
        aria-label="Quick time value"
        compressed={true}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        value={32}
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSelect
        aria-label="Quick time units"
        compressed={true}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "text": "seconds",
              "value": "s",
            },
            Object {
              "text": "minutes",
              "value": "m",
            },
            Object {
              "text": "hours",
              "value": "h",
            },
            Object {
              "text": "days",
              "value": "d",
            },
            Object {
              "text": "weeks",
              "value": "w",
            },
            Object {
              "text": "months",
              "value": "M",
            },
            Object {
              "text": "years",
              "value": "y",
            },
          ]
        }
        value="M"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        className="euiQuickSelect__applyButton"
        disabled={false}
        onClick={[Function]}
        size="s"
      >
        Apply
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule
    margin="s"
  />
</Fragment>
`;
